--- a/Readme
+++ b/Readme
@@ -4,9 +4,11 @@ Password: admin
 Backend: 
 1. replace your db connection string
 2. Run Migration for db creation and initial data seed
+3. Project has created with .net 5
 
 Frontend:
 1. in environment.ts file, replace the localhost url
 2. npm install
-2. In front end you can upload file, View all account balances and for reports you can view hitory of individual accounts by clicking on accounts.
+3. In front end you can upload file, View all account balances and for reports you can view hitory of individual accounts by clicking on accounts.
+4. Project has created with Angular 15
 
